--- a/cart/Dockerfile
+++ b/cart/Dockerfile
@@ -4,7 +4,7 @@ COPY package.json .
 COPY *.js .
 RUN npm install
 ENV MONGO="true" \
-    REDIS_URL="redis://redis:6379" \
+    REDIS_URL="redis" \
     CATALOGUE_HOST="catalogue" \
     CATALOGUE_PORT="8080"
 CMD ["node","server.js"]
