--- a/cart/Dockerfile
+++ b/cart/Dockerfile
@@ -3,8 +3,7 @@ WORKDIR /opt/server
 COPY package.json .
 COPY *.js .
 RUN npm install
-ENV MONGO="true" \
-    REDIS_URL="redis" \
+ENV REDIS_HOST="redis" \
     CATALOGUE_HOST="catalogue" \
     CATALOGUE_PORT="8080"
 CMD ["node","server.js"]
