--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -2,7 +2,7 @@ networks:
   default:
     driver: bridge
     name: roboshop
-    #external: true # I created networks already using docker network create roboshop
+    external: true # I created networks already using docker network create roboshop
 
 services:
   mongodb:
@@ -37,4 +37,3 @@ services:
     depends_on:
     - mysql
     - cart
-    
