--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -4,3 +4,5 @@ ADD static /usr/share/nginx/html
 
 RUN rm -rf /etc/nginx/nginx.conf
 ADD nginx.conf /etc/nginx/nginx.conf
+
+RUN rm -rf /etc/nginx/conf.d/default.conf
