--- a/catalogue/Dockerfile
+++ b/catalogue/Dockerfile
@@ -1,5 +1,9 @@
 FROM node:20-alpine3.21
+RUN addgroup -S roboshop && adduser -S roboshop -G roboshop
 WORKDIR /opt/server
+RUN chown -R roboshop:roboshop /opt/server
+# -R means recursive, so it changes ownership of all files and directories under /opt/server
+USER roboshop
 COPY package.json .
 COPY *.js .
 RUN npm install
